# ContribAI

./: AGENTS.md  CHANGELOG.md  HALL_OF_FAME.md  PROVENANCE.yml  README.md  config.example.yaml  config.yaml.template  pyproject.toml
.github/workflows/: ci.yml  release.yml
contribai/: __init__.py
contribai/analysis/: analyzer.py  repo_intel.py  strategies.py
contribai/cli/: main.py
contribai/core/: config.py  models.py  retry.py
contribai/generator/: engine.py  scorer.py
contribai/github/: client.py  discovery.py
contribai/issues/: solver.py
contribai/llm/: context.py  provider.py
contribai/orchestrator/: memory.py  pipeline.py
contribai/pr/: manager.py
crates/contribai-rs/: Cargo.toml
crates/contribai-rs/src/: main.rs
crates/contribai-rs/src/analysis/: ast_intel.rs  compressor.rs  strategies.rs
crates/contribai-rs/src/cli/: mod.rs
crates/contribai-rs/src/core/: config.rs  leaderboard.rs  models.rs
crates/contribai-rs/src/generator/: engine.rs  scorer.rs  self_review.rs
crates/contribai-rs/src/github/: client.rs  discovery.rs
crates/contribai-rs/src/llm/: mod.rs  provider.rs  retry.rs
crates/contribai-rs/src/mcp/: client.rs  server.rs
crates/contribai-rs/src/orchestrator/: memory.rs  pipeline.rs
crates/contribai-rs/src/plugins/: mod.rs
crates/contribai-rs/src/pr/: manager.rs  patrol.rs
crates/contribai-rs/src/web/: mod.rs
crates/contribai-rs/tests/: hunt_integration.rs  memory_integration.rs  patrol_integration.rs  pipeline_integration.rs
crates/contribai-rs/tests/common/: mock_github.rs  mock_llm.rs  mod.rs
docs/: ARCHITECTURE.md  README.md  code-standards.md  codebase-summary.md  deployment-guide.md  project-overview-pdr.md  project-roadmap.md  system-architecture.md
plans/260404-1621-v560-sprint-plan/: phase-01-docs-quick-wins.md  phase-02-integration-tests.md  phase-03-merge-rate-improvements.md  phase-04-advanced-analysis.md  plan.md
plans/260405-0054-v571-gap-completion/: phase-01-mock-github-infra.md  phase-02-patrol-integration-tests.md  phase-03-hunt-integration-tests.md  phase-04-cross-file-import-resolution.md  phase-05-docs-roadmap-sync.md  plan.md
plans/260405-1447-v581-remaining-gaps/: phase-01-code-review-fixes.md  phase-02-closed-pr-analysis.md  phase-03-outcome-scoring.md  plan.md
plans/reports/: code-reviewer-260405-0154-v571-review.md  planner-260404-1621-v560-sprint-plan.md  planner-260405-1447-v581-remaining-gaps.md  project-manager-260405-0154-v571-gap-completion-final.md
scripts/: cleanup_forks.py
tests/unit/: test_repo_intel.py
